--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ derive_more = { version = "2.0.1", features = ["constructor"] }
 getset = "0.1.6"
 itertools = "0.14.0"
 ordered-float = "5.1.0"
+paste = "1.0.15"
 strum = { version = "0.27.2", features = ["derive"] }
 strum_macros = "0.27.2"
 thiserror = "2.0.17"
